--- a/JenkinsDemo/pom.xml
+++ b/JenkinsDemo/pom.xml
@@ -32,12 +32,51 @@
 	</dependencies>
 
 	<build>
+	<finalName>${project.artifactId}</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- <version>2.22.0</version> -->
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-jar-plugin</artifactId>
+         <version>2.3.2</version>
+         <configuration>
+            <archive>
+               <index>true</index>
+               <manifestSections>
+                  <manifestSection>
+                     <name>${project.name}</name>
+                     <manifestEntries>
+                        <mode>development</mode>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>${project.artifactId}</artifactId>
+                        <version>${project.version}</version>
+                     </manifestEntries>
+                  </manifestSection>
+               </manifestSections>
+            </archive>
+         </configuration>
+      </plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.0.2</version>
+			</plugin> 
+			
+			
 		</plugins>
 	</build>
+
 
 </project>
